exports[`(.not).toHavePaymentRequiredStatus > using axios > .not.toHavePaymentRequiredStatus > fails when response have status code 402 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHavePaymentRequiredStatus()</intensity>

Expected status code to not be 402 received:
  <red>402</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 402,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHavePaymentRequiredStatus > using axios > .toHavePaymentRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHavePaymentRequiredStatus()</intensity>

Expected status code to be 402 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHavePaymentRequiredStatus > using got > .not.toHavePaymentRequiredStatus > fails when response have status code 402 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHavePaymentRequiredStatus()</intensity>

Expected status code to not be 402 received:
  <red>402</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 402,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHavePaymentRequiredStatus > using got > .toHavePaymentRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHavePaymentRequiredStatus()</intensity>

Expected status code to be 402 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
